--- a/index.html
+++ b/index.html
@@ -1,176 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <title>Angelica Palilio | Portfolio</title>
+<head>
+    <meta charset="UTF-8">
+    <title>Angelica Palilio | Portfolio</title>
 
-        <!-- META DESCRIPTION -->
-        <meta name="description" content="This website is my coded portfolio site that (under construction)">
+    <!-- META DESCRIPTION -->
+    <meta name="description" content="This website is my coded portfolio site that (under construction)">
 
-        <!-- META KEYWORDS -->
-        <meta name="keywords" content="Web design, web development, ux, ui, frontend web development, html, css, javascript.">
+    <!-- META KEYWORDS -->
+    <meta name="keywords" content="Web design, web development, ux, ui, frontend web development, html, css, javascript.">
 
-        <!-- FOR RESPONSIVE DESIGN -->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- FOR RESPONSIVE DESIGN -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- ADOBE FONTS -->
-        <link rel="stylesheet" href="https://use.typekit.net/dut3ivt.css">
+    <!-- ADOBE FONTS -->
+    <link rel="stylesheet" href="https://use.typekit.net/dut3ivt.css">
 
-        <!-- MAIN CSS -->
-        <link href="css/style.css" rel="stylesheet" type="text/css">
+    <!-- MAIN CSS -->
+    <link href="css/style.css" rel="stylesheet" type="text/css">
 
-    </head>
+</head>
 
-    <body>
-        <header>
-            <div class="site-logo">
-                <a href="index.html">
-                    <img src="img/png/portfolio-logo.png" alt="Site Base Logo" width="70" height="70">
-                </a>
-            </div>
-            <nav class="site-nav">
-                <ul>
+<body>
+    <header>
+        <div class="site-logo">
+            <a href="index.html">
+                <img src="img/png/portfolio-logo.png" alt="Site Base Logo" width="70" height="70">
+            </a>
+        </div>
+        <nav class="site-nav">
+            <ul>
 
-                    <li><a href="#works">Works</a></li>
-                    <li><a href="about.html">About</a></li>
+                <li><a href="#works">Works</a></li>
+                <li><a href="about.html">About</a></li>
 
-                </ul>
-            </nav>
-        </header>
+            </ul>
+        </nav>
+    </header>
 
-        <main>
-            <section class="hero">
-                <h2>
-                    Designing with
-                    <span>
-                        <span>purpose</span>
-                        <span>passion</span>
-                        <span>progress</span>
-                        <span>perspective</span>
-                        <span>personality</span>
-                    </span>
-                </h2>
+    <main>
+        <section class="hero">
+            <h2>
+                Designing with
+                <span>
+                    <span>purpose</span>
+                    <span>passion</span>
+                    <span>progress</span>
+                    <span>perspective</span>
+                    <span>personality</span>
+                </span>
+            </h2>
 
-                <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, nihil doloremque id tempora tenetur odit vel totam magni aut expedita rem fugiat, voluptate veniam officia adipisci at magnam quisquam eos a accusamus quasi et sed eaque necessitatibus? </p> -->
+            <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, nihil doloremque id tempora tenetur odit vel totam magni aut expedita rem fugiat, voluptate veniam officia adipisci at magnam quisquam eos a accusamus quasi et sed eaque necessitatibus? </p> -->
 
-                <!-- <a href="#works" class="cta-button">View My Work</a>
+            <!-- <a href="#works" class="cta-button">View My Work</a>
             </div> -->
 
-            </section>
+        </section>
 
-            </section>
+        </section>
 
-            <section class="works" id="works">
-                <!-- <h2 class="works-heading">Projects</h2> -->
-                <div class="works-grid">
-                    <div class="works-project">
-                        <a href="araw.html">
-                            <img src="img/webp/baby-sunscreen.webp" alt="araw baby-sunscreen" width="1920" height="1800">
-                        </a>
-                        <p>Araw</p>
-                    </div>
-                    <div class="works-project light">
-                        <a href="#">
-                            <img src="" alt="Image 4">
-                        </a>
-                        <p>Resting Mug</p>
-                    </div>
-                    <div class="works-project">
-                        <a href="cinqueterre.html">
-                            <img class="ocard-image" src="img/webp/cinque-terre-logo-w-bg.webp" alt="Cinque Terre Logo" width="1920" height="1800">
-                        </a>
-                        <p>Cinque Terre</p>
-                    </div>
-                    <div class="works-project">
-                        <a href="#">
-                            <img src="img/webp/krishna-cow-logo-w-bg.webp" alt="krishna logo" width="1920" height="1800">
-                        </a>
-                        <p>Krishna Cow Sanctuary</p>
-                    </div>
-                    <div class="works-project light">
-                        <a href="charlesandrayeames.html">
-                            <img src="img/webp/eames-cover-photo.webp" alt="Layout" width="1920" height="1800">
-                        </a>
-                        <p>Charles and Ray Eames Editorial</p>
-                    </div>
-
-                    <div class="works-project light">
-                        <a href="#">
-                            <img src="img/png/boozi-can.png" alt="boozi-can" width="1920" height="1800">
-                        </a>
-                        <p>Boozi Hard Seltzer</p>
-                    </div>
-                </div>
-
-                <div class="works-full">
-                    <!-- <div class="works-project full"> -->
-                    <a href="charlesandrayeames.html">
-                        <img src="img/webp/combined-sunscreen.webp" alt="tba" width="1920" height="1800">
+        <section class="works" id="works">
+            <!-- <h2 class="works-heading">Projects</h2> -->
+            <div class="works-full">
+                <a href="araw.html">
+                    <img src="img/webp/combined-sunscreen.webp" alt="tba" width="1920" height="1800">
+                </a>
+                <p>Araw</p>
+            </div>
+            <div class="works-grid">
+                <div class="works-project light">
+                    <a href="#">
+                        <img src="img/png/eames-chair.png" alt="Image 4">
                     </a>
-                    <p>hello there</p>
+                    <p>Resting Mug</p>
+                </div>
+                <div class="works-project">
+                    <a href="cinqueterre.html">
+                        <img class="ocard-image" src="img/webp/cinque-terre-logo-w-bg.webp" alt="Cinque Terre Logo" width="1920" height="1800">
+                    </a>
+                    <p>Cinque Terre</p>
                 </div>
 
-            </section>
+                <div class="works-project">
+                    <a href="#">
+                        <img src="img/webp/krishna-cow-logo-w-bg.webp" alt="krishna logo" width="1920" height="1800">
+                    </a>
+                    <p>Krishna Cow Sanctuary</p>
+                </div>
+                <div class="works-project light">
+                    <a href="charlesandrayeames.html">
+                        <img src="img/webp/eames-cover-photo.webp" alt="Layout" width="1920" height="1800">
+                    </a>
+                    <p>Charles and Ray Eames Editorial</p>
+                </div>
 
-        </main>
+                <div class="works-project light">
+                    <a href="#">
+                        <img src="img/png/boozi-can.png" alt="boozi-can" width="1920" height="1800">
+                    </a>
+                    <p>Boozi Hard Seltzer</p>
+                </div>
+            </div>
 
-        <footer class="site-footer">
+        </section>
+
+    </main>
+
+    <footer class="site-footer">
 
 
-            <div class="eyebrow"> <strong>Projects</strong></div>
+        <div class="eyebrow"> <strong>Projects</strong></div>
 
-            <div class="row">
-                <div class="one-third column">
-                    <div class="work">
-                        <div>
+        <div class="row">
+            <div class="one-third column">
+                <div class="work">
+                    <div>
 
-                            <ul class="footer-worknav">
-                                <li><a href="araw.html">Araw</a></li>
-                                <!-- <li><a href="#">The Resting Mug</a></li> -->
-                                <li><a href="cinqueterre.html">Cinque Terre</a></li>
-                                <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
-                                <!-- <li><a href="#">Krishna Cow Sanctuary</a></li> -->
-                                <!-- <li><a href="#">Boozi Hard Seltzer</a></li> -->
-                            </ul>
-                        </div>
+                        <ul class="footer-worknav">
+                            <li><a href="araw.html">Araw</a></li>
+                            <!-- <li><a href="#">The Resting Mug</a></li> -->
+                            <li><a href="cinqueterre.html">Cinque Terre</a></li>
+                            <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
+                            <!-- <li><a href="#">Krishna Cow Sanctuary</a></li> -->
+                            <!-- <li><a href="#">Boozi Hard Seltzer</a></li> -->
+                        </ul>
                     </div>
                 </div>
-                <div class="one-third column">
-                    <ul class="footer-pagenav">
+            </div>
+            <div class="one-third column">
+                <ul class="footer-pagenav">
 
-                        <li><a href="index.html">home</a></li>
+                    <li><a href="index.html">home</a></li>
 
-                        <li><a href="about.html">about</a></li>
+                    <li><a href="about.html">about</a></li>
 
-                    </ul>
+                </ul>
 
-                </div>
-                <div class="one-third column">
-                    <ul class="footer-socialnav">
+            </div>
+            <div class="one-third column">
+                <ul class="footer-socialnav">
 
-                        <li><a href="#">linkedin</a></li>
+                    <li><a href="#">linkedin</a></li>
 
-                        <li><a href="#">email</a></li>
+                    <li><a href="#">email</a></li>
 
-                    </ul>
-
-                </div>
+                </ul>
 
             </div>
 
-            <div class="legal">
+        </div>
 
-                <p>&copy; 2025 Angelica Palilio. All Rights Reserved </p>
+        <div class="legal">
 
-                <div class="legal-links">
+            <p>&copy; 2025 Angelica Palilio. All Rights Reserved </p>
 
-                </div>
+            <div class="legal-links">
 
             </div>
 
-        </footer>
+        </div>
 
-    </body>
+    </footer>
+
+</body>
 
 </html>
