--- a/about.html
+++ b/about.html
@@ -13,9 +13,11 @@
     <!-- FOR RESPONSIVE DESIGN -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- ADOBE FONTS -->
+    <link rel="stylesheet" href="https://use.typekit.net/dut3ivt.css">
+
     <!-- MAIN CSS -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="https://use.typekit.net/dut3ivt.css">
 </head>
 
 <body>
