--- a/cinqueterre.html
+++ b/cinqueterre.html
@@ -13,8 +13,11 @@
     <!-- FOR RESPONSIVE DESIGN -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <!-- ADOBE FONTS -->
     <link rel="stylesheet" href="https://use.typekit.net/dut3ivt.css">
+
+    <!-- MAIN CSS -->
+    <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
