--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         <nav class="site-nav">
             <ul>
 
-                <li><a href="/index.html">Works</a></li>
+                <li><a href="index.html#projects">Projects</a></li>
                 <li><a href="/about.html">About</a></li>
 
             </ul>
