--- a/index-withocard.html
+++ b/index-withocard.html
@@ -35,7 +35,7 @@
         <nav class="site-nav">
             <ul>
 
-                <li><a href="#works">Works</a></li>
+                <li><a href="index.html#projects">Projects</a></li>
                 <li><a href="about.html">About</a></li>
 
             </ul>
