embeded resume in about page

--- a/about.html
+++ b/about.html
@@ -18,13 +18,14 @@
 
     <!-- MAIN CSS -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
+
 </head>
 
 <body>
     <header>
         <div class="site-logo">
             <a href="index.html">
-                <img src="img/png/portfolio-logo.png" alt="Site Base Logo" width="70" height="70">
+                <img class="profile" src="img/png/portfolio-logo.png" alt="Site Base Logo" width="70" height="70">
             </a>
         </div>
         <nav class="site-nav">
@@ -39,20 +40,91 @@
 
     <main>
         <section class="about">
+            <div class="row">
+                <div class="col-3 ">
+
+                    <img class="profile" src="img/jpg/profile-photo.jpg" alt="profile image of Angelica">
+
+                    <h3>Contact</h3>
+                    <p>Email: angelicapal003 at gmail.com</p>
+
+                    <li><a class="a-button" href="#" target="_blank">Resume</a></li>
+
+                </div>
+
+                <div class="col-8">
+                    <h2>Hello!</h2>
+                    <p>I'm Angelica and a <i>graphic designer</i> based in <strong>Honolulu, Hawaii.</strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic molestias accusamus est in quis optio voluptatem beatae placeat eos provident. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab vel officiis illo neque corporis. Fuga ut eius fugiat voluptas omnis cupiditate nobis. Iure ipsum sequi est amet voluptates expedita nemo. Pariatur ipsa iure exercitationem dolores aliquid iusto beatae minus tempora.</p>
+
+                    <div class="row">
+                        <div class="one-half">
+                            <h3>Education</h3>
+                            <ul>
+                                <li>
+                                    <div class="res-sub"><strong>Kapi&#699;olani Community College</strong></div>
+                                    <div class="res-degree"><em>A.S New Media Arts Interface Design</em></div>
+                                    <div class="res-date">August 2023&ndash;Present</div>
+                                </li>
+                                <li>
+                                    <div class="res-sub"><strong>Hawai&#699i Community College</strong></div>
+                                    <div class="res-degree"><em>A.A Liberal Arts</em></div>
+                                    <div class="res-date">August 2019&ndash;May 2021</div>
+                                </li>
+                            </ul>
+
+                            <h3>Software</h3>
+                            <ul>
+                                <li>Illustrator <br>
+                                    InDesign <br>
+                                    Photoshop <br>
+                                    After Effects <br>
+                                    HTML/CSS/JS <br>
+                                    Figma
+                                </li>
+                            </ul>
+
+                        </div>
+                        <div class="one-half">
+
+                            <h3>Experience</h3>
+                            <ul>
+                                <li><strong>Wasiswas</strong> <br> <em>Student Intern </em><br> <span class="res-date">October 2024&ndash;December 2024</span></li>
+                            </ul>
+
+                            <ul>
+                                <li>
+                                    <strong>Kapi&#699;olani Community College</strong> <br>
+                                    <em>Financial Aid Student Assistant</em> <br>
+                                    <span class="res-date">September 2023&ndash;Present</span>
+                                </li>
+                            </ul>
+
+                            <ul>
+                                <li><strong>Old Navy</strong> <br> <em>Brand Associates </em><br> <span class="res-date">March 2021&ndash;September 2023</span> </li>
+                            </ul>
+
+                            <ul>
+                                <li><strong>Mini Monster</strong> <br> <em>Shift Lead</em> <br> <span class="res-date">March 2024&ndash;October 2024</span> </li>
+                            </ul>
+
+                            <ul>
+                                <li><strong>Mauna Loa Visitor's Center</strong> <br> <em>Sales Associate</em> <br> <span class="res-date">June 2022&ndash;April 2023</span></li>
+                            </ul>
+
+                            </ul>
+                        </div>
+                    </div>
+
+
+                </div>
+
 
 
             </div>
-            <div class="one-half">
-                <h2>About Me</h2>
 
-                <p>Hello, I'm Angelica and I am a <i></i>graphic designer</i> based in <strong>Honolulu, Hawaii.</strong>
-
-
-                    On my free time, I love going to the beach and watching the sunset, staying in and baking or cooking while having my favorite shows play in the background, as well as reading.</p>
-
-            </div>
 
         </section>
+
     </main>
 
     <footer class="site-footer">
@@ -89,7 +161,7 @@
             <div class="one-third column">
                 <ul class="footer-socialnav">
 
-                    <li><a href="#">linkedin</a></li>
+                    <li><a href="https://www.linkedin.com/in/angelica-palilio-ba64731b8/" target="_blank">linkedin</a></li>
 
                     <li><a href="#">email</a></li>
 
@@ -110,9 +182,6 @@
         </div>
 
     </footer>
-
-    <!-- MAIN JS FILE -->
-    <script src="js/script.js"></script>
 
 </body>
 
