--- a/araw.html
+++ b/araw.html
@@ -60,55 +60,44 @@
 
                 <div class="three-fourths">
                     <div class="container-content">
-                        <h2 class="p-top">Enjoy safe, gentle sun protection for all skin types, from babies to adults, with a commitment to sustainability.</h2>
 
-                        <h5>The Challenge</h5>
-                        <h3>How can you create brand elements for a sustainable sunscreen brand?</h3>
-                        <p>To create brand elements for a sustainable sunscreen, I did research on the ingredients that are used in the sunscreen. I also research ideas on what protection means and sketched out ideas to that could symbolize protection. s</p>
+                        <p>To create brand elements for Araw, I started by conducting thorough research to understand the essence of the brand and its values. I explored various design concepts, paying close attention to color schemes and textures that would evoke a sense of sun, protection, and freshness. This helped me develop a clear vision of the look and feel. I focused on creating a modern, clean aesthetic that reflects Araw's commitment to high-quality, effective skincare. Ultimately, the goal was to design a product that would resonate with consumers while being functional and visually appealing.
+                            For my brand assets, I stepped away from the digital realm and embraced a more organic, hands-on approach to designing the otter's head. I experimented with ink droplets on paper, exploring different shapes and patterns until I landed on the perfect one. Once I found it, I scanned the droplet into the computer and refined the details digitally. That single ink droplet became a central design element—doubling as the sun in the adult sunscreen and the otter in the baby sunscreen.
+                            For the adult sunscreen specifically, I wanted the sun to feel as lifelike and textured. To capture its natural imperfections and depth, I painted my fingers to transfer the ridges of my fingerprints onto paper. These unique patterns became the foundation for the sun’s organic lines and soft shadows, adding a tactile, human element that made the design feel warm and dynamic.
+                        </p>
                     </div>
                 </div>
             </div>
             </section>
 
-            <section>
-                <div class="araw-process">
-                    <div class="row">
-                        <div class="one-half">
-                            <div class="process araw-padding">
-                                <img src="img/png/araw-black-logo-resized.png" alt="">
-                            </div>
+            <section class="araw-container">
+                <div class="project-grid">
+                    <!-- <div class="project-card">
+                        <img src="img/png/araw-black-logo.png" alt="Project 2" class="project-image">
+                        <div class="project-overlay">
                         </div>
+                    </div> -->
+                    <!-- <div class="project-card full-width">
+                        <img src="img/webp/adult-sunscreen.webp" alt="Project 2" class="project-image">
+                        <div class="project-overlay">
 
-                        <div class="one-half">
-                            <div class="process">
-                                <!-- <img src="img/svg/araw-color-palette.svg" alt=""> -->
-                                <h2 class="logo-description">What is Araw?</h2>
-
-                                <p>Araw (Ah-rao) is a sunscreen brand that uses simple ingriedients and sustainable packaging to not only keep your skin protected but it is also safe to natural bodies of water and its ecosystems.
-                                </p>
-                                <img src="img/svg/araw-color-palette-horizontal.svg" alt="">
-
-                            </div>
                         </div>
-
-
-                        <div class="one-half">
-                            <div class="process">
-                                <!-- <img src="img/svg/araw-color-palette.svg" alt=""> -->
-                                <h2 class="logo-description">Brand Assets</h2>
-
-                                <p>For my brand assets, I took a step away from digital work to explore a more organic approach in shaping the otter&apos;s head. I experimented with ink droplets on paper until I found the perfect one. Once I identified the ideal design, I scanned it into the computer and fine-tuned the details. The ink droplet became a key element, appearing both as the sun in the adult sunscreen and as the otter in the baby sunscreen.
-                                </p>
-                                <p> For the adult sunscreen, I aimed to make the sun as realistic as possible. To capture its dark spots and texture, I used my fingers to paint and create fingerprints, which I then incorporated into the design to produce the natural lines and shadows that make the sun feel dynamic.</p>
-
-                            </div>
-                        </div>
-                        <div class="one-half">
-                            <div class="process">
-                                <img src="img/webp/araw-brand-assets.webp" alt="">
-                            </div>
+                    </div> -->
+                    <div class="project-card">
+                        <img src="img/webp/facestick.webp" alt="Project 2" class="project-image">
+                        <div class="project-overlay">
                         </div>
                     </div>
+                    <div class="project-card">
+                        <img src="img/webp/baby-sunscreen.webp" alt="Project 3" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                    <!-- <div class="project-card full-width">
+                        <img src="https://placehold.co/600x400" alt="Project 4" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div> -->
                 </div>
             </section>
             <section>
@@ -219,7 +208,7 @@
             <div class="one-third column">
                 <ul class="footer-socialnav">
 
-                    <li><a href="#">linkedin</a></li>
+                    <li><a href="https://www.linkedin.com/in/angelica-palilio-ba64731b8/" target="_blank">linkedin</a></li>
 
                     <li><a href="#">email</a></li>
 
@@ -240,11 +229,6 @@
         </div>
 
     </footer>
-    <!-- OVERLAPING CARD JS -->
-    <script src="js/aat.min.js"></script>
-
-    <!-- MAIN OCARD JS FILE -->
-    <script src="js/ocard.js"></script>
 
 </body>
 </body>
