--- a/cinqueterre.html
+++ b/cinqueterre.html
@@ -138,7 +138,7 @@
             <div class="one-third column">
                 <ul class="footer-socialnav">
 
-                    <li><a href="#">linkedin</a></li>
+                    <li><a href="https://www.linkedin.com/in/angelica-palilio-ba64731b8/" target="_blank">linkedin</a></li>
 
                     <li><a href="#">email</a></li>
 
@@ -159,11 +159,6 @@
         </div>
 
     </footer>
-    <!-- OVERLAPING CARD JS -->
-    <script src="js/aat.min.js"></script>
-
-    <!-- MAIN OCARD JS FILE -->
-    <script src="js/ocard.js"></script>
 
 </body>
 
