--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="one-third column">
                 <ul class="footer-socialnav">
 
-                    <li><a href="#">linkedin</a></li>
+                    <li><a href="https://www.linkedin.com/in/angelica-palilio-ba64731b8/" target="_blank">linkedin</a></li>
 
                     <li><a href="#">email</a></li>
 
