--- a/charlesandrayeames.html
+++ b/charlesandrayeames.html
@@ -129,7 +129,7 @@
             <div class="one-third column">
                 <ul class="footer-socialnav">
 
-                    <li><a href="#">linkedin</a></li>
+                    <li><a href="https://www.linkedin.com/in/angelica-palilio-ba64731b8/" target="_blank">linkedin</a></li>
 
                     <li><a href="#">email</a></li>
 
@@ -150,11 +150,7 @@
         </div>
 
     </footer>
-    <!-- OVERLAPING CARD JS -->
-    <script src="js/aat.min.js"></script>
 
-    <!-- MAIN OCARD JS FILE -->
-    <script src="js/ocard.js"></script>
 
 </body>
 </body>
